--- a/assets/scss/base/_variables.scss
+++ b/assets/scss/base/_variables.scss
@@ -6,3 +6,11 @@ $spacing: 15px;
 // LAYOUT VARIABLES
 $header-height: 54px;
 $aside-width: 250px;
+
+// colors
+$palletes: (
+  --red: #ff1744,
+  --blue: #0277bd,
+  --gren: #1b5e20,
+  --yellow: #ffeb3b
+);
